--- a/posts/graph-theory-terms.mdx
+++ b/posts/graph-theory-terms.mdx
@@ -5,16 +5,10 @@ category: Math
 description: "Basic Graph Theory terms and problems"
 ---
 
-<img
-  src="/static/graph-theory-terms/graph-1.png"
-  className="w-24 float-left mr-10"
-/>
+Graphs are a collection of points which are bounded by lines. We call the
+points of a graph, <strong>vertices</strong>, and the lines,{" "}
 
-<div className="text-justify">
-  Graphs are a collection of points which are bounded by lines. We call the
-  points of a graph, <strong>vertices</strong>, and the lines,{" "}
-  <strong>edges</strong>.
-</div>
+<strong>edges</strong>
 
 A **complete graph** or **clique** is a graph in which every pair of vertices is connected by an edge. Complete graphs are denoted by $K_n$ where $n$ is the total number of vertices. The total number of edges in a complete graph is $\binom{n}{2}$.
 
